Bug 491502 - Inverted Axis No Longer Displays Ticks
Summary: Inverted Axis No Longer Displays Ticks
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: latest
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
: 492475 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-09 21:27 UTC by Santana
Modified: 2024-09-12 06:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12
Sentry Crash Report:


Attachments
Graph with the axis inverted and ticks (353.28 KB, image/png)
2024-08-09 21:27 UTC, Santana
Details
Plot Conditions for inverted axis (715.17 KB, image/png)
2024-08-09 21:30 UTC, Santana
Details
Axis conditions/ tick conditions (700.59 KB, image/png)
2024-08-09 21:31 UTC, Santana
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Santana 2024-08-09 21:27:58 UTC
Created attachment 172456 [details]
Graph with the axis inverted and ticks

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
When I inverted my axis the tick marks disappeared, then I went to manually adjust to try to adjust the start and stop points I could only generate a single tick regardless of how I defined the start, spacing, numbering ect. When the axis is returned to the standard ordering the tick marks return and are able to be adjusted, this was not an issue on previous versions of the software. 

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Santana 2024-08-09 21:30:12 UTC
Created attachment 172457 [details]
Plot Conditions for inverted axis
Comment 2 Santana 2024-08-09 21:31:51 UTC
Created attachment 172458 [details]
Axis conditions/ tick conditions

Used the auto feature to add the offset
Comment 3 Alexander Semke 2024-09-01 11:22:11 UTC
*** Bug 492475 has been marked as a duplicate of this bug. ***
Comment 4 Stefan Gerlach 2024-09-09 20:39:06 UTC
Git commit 4376e012f8a34e2a987dcf7ae9595a9b3b81f8b7 by Stefan Gerlach.
Committed on 09/09/2024 at 20:38.
Pushed by sgerlach into branch 'master'.

Fix reverted axes (max < min)

M  +10   -7    src/backend/worksheet/plots/cartesian/Axis.cpp
M  +4    -4    src/backend/worksheet/plots/cartesian/CartesianPlot.cpp

https://invent.kde.org/education/labplot/-/commit/4376e012f8a34e2a987dcf7ae9595a9b3b81f8b7