Fix reverted axes (max < min)

BUG: 491502