src/backend/worksheet/plots/cartesian/Axis.cpp
@@ -609,7 +609,7 @@ void Axis::setStart(double min) {
 	Q_D(Axis);
 	Range<double> range = d->range;
 	const auto scale = range.scale();
-	if (!(((RangeT::isLogScale(scale)) && min <= 0) || (scale == RangeT::Scale::Sqrt && min < 0))) {
+	if (!((RangeT::isLogScale(scale) && min <= 0) || (scale == RangeT::Scale::Sqrt && min < 0))) {
 		range.setStart(min);
 		setRange(range);
 	}
@@ -1513,7 +1513,6 @@ void AxisPrivate::retransformTicks() {
 	double start{range.start()}, end{range.end()};
 	if (majorTicksStartType == Axis::TicksStartType::Absolute) {
 		start = majorTickStartValue;
-
 	} else if (majorTicksStartType == Axis::TicksStartType::Offset) {
 		if (q->isNumeric())
 			start += majorTickStartOffset;
@@ -1694,7 +1693,7 @@ void AxisPrivate::retransformTicks() {
 	const auto dtValid = majorTickPosDateTime.isValid();
 
 	for (int iMajor = 0; iMajor < tmpMajorTicksNumber || (dateTimeSpacing && dtValid); iMajor++) {
-		//		DEBUG(Q_FUNC_INFO << ", major tick " << iMajor)
+		// DEBUG(Q_FUNC_INFO << ", major tick " << iMajor)
 		qreal majorTickPos = 0.0;
 		qreal nextMajorTickPos = 0.0;
 		// calculate major tick's position
@@ -1702,7 +1701,7 @@ void AxisPrivate::retransformTicks() {
 		if (!dateTimeSpacing) {
 			switch (q->scale()) {
 			case RangeT::Scale::Linear:
-				//				DEBUG(Q_FUNC_INFO << ", start = " << start << ", incr = " << majorTicksIncrement << ", i = " << iMajor)
+				// DEBUG(Q_FUNC_INFO << ", start = " << start << ", incr = " << majorTicksIncrement << ", i = " << iMajor)
 				majorTickPos = start + majorTicksIncrement * iMajor;
 				if (std::abs(majorTickPos) < 1.e-15 * majorTicksIncrement) // avoid rounding errors when close to zero
 					majorTickPos = 0;
@@ -1745,8 +1744,12 @@ void AxisPrivate::retransformTicks() {
 				majorTickPos = majorTickPosDateTime.toMSecsSinceEpoch();
 			}
 		}
-		if (majorTickPos > end || iMajor > maxNumberMajorTicks)
-			break; // Finish
+
+		// finish here when out of range
+		if (iMajor > maxNumberMajorTicks)
+			break;
+		if ((majorTicksIncrement > 0 && majorTickPos > end) || (majorTicksIncrement < 0 && majorTickPos < end))
+			break;
 
 		int columnIndex = iMajor; // iMajor used if for the labels a custom column is used.
 		if ((majorTicksType == Axis::TicksType::CustomColumn || majorTicksType == Axis::TicksType::CustomValues)
@@ -1814,7 +1817,7 @@ void AxisPrivate::retransformTicks() {
 			}
 
 			const qreal value = scalingFactor * majorTickPos + zeroOffset;
-			//			DEBUG(Q_FUNC_INFO << ", value = " << value << " " << scalingFactor << " " << majorTickPos << " " << zeroOffset)
+			// DEBUG(Q_FUNC_INFO << ", value = " << value << " " << scalingFactor << " " << majorTickPos << " " << zeroOffset)
 
 			// if custom column is used, we can have duplicated values in it and we need only unique values
 			if ((majorTicksType == Axis::TicksType::CustomColumn || majorTicksType == Axis::TicksType::ColumnLabels) && tickLabelValues.indexOf(value) != -1)
